--- a/bemutatkozas.html
+++ b/bemutatkozas.html
@@ -96,7 +96,11 @@
         <section>
             <div class="container">
                 <div class="zsofioldala">
-
+                    <div id="bemutatkozas" class="p-2">
+                        <h5 class="intro">Nagy Zsófiának hívnak, művésznevem Gólya.</h5>
+                        <p class="intro">1976-ban születtem Budapesten. 1991-től a Képző- és Iparművészeti Szakközépiskola, - "kisképző" - könyvszakára jártam. Ezen kívül tanultam díszítőfestést, festményrestaurálást és képkeretezést. Jelenleg is ezzel foglalkozom, megrendelésre
+                            festményeket, grafikákat, ajándék tárgyakat készítek, valamint képeket restaurálok.</p>
+                    </div><br>
                     <div class="jumbotron">
                         <img class="img-fluid" src="mesegrafika/gyerekszoba/babaszoba14.JPG">
                         <img class="img-fluid" src="mesegrafika/gyerekszoba/Babaszoba_9.JPG">
@@ -108,13 +112,28 @@
                     <p id="idezet">"Képet bárki tud festeni, de hogy a képnek lelket adj, Istenhez közel kell lenned!"
                         <img src="./pics/golya.gif" id="golyagif"></p>
                 </div>
+                <div class="container" id="gondolatok">
+                    <h3>Az én világom</h3>
+
+                    <p>Munkám során jöttem rá, hogy bár a barokk mintái közé születtem, az én lelkem mégis inkább a szecesszió cifra világában érzi jól magát, ahol a gömbölyű formáktól és a hullámzó vonalaktól szinte megszédül az ember, ahol az élénk, bátor
+                        színek is teret kapnak.</p>
+
+                    <p>A színek világa egy csodálatos világ, ahol minden szín mögé egy hangulat és érzés bújik. Egy-egy színes üveg, bútor, képes megváltoztatni az ember hangulatát. Sok ember fehér meszelt falak közé tér haza, vagy az éppen divatos színek
+                        világában él, és figyelmen kívül hagyja a színek értelmét és hatalmát. A színek világa nem játék, okosan kell őket alkalmazni, hisz a lakásunkban használt színek nagy hatással vannak életünk, hangulatunk, érzéseink és gondolataink
+                        alakulására. Eme hatalmat azonban nem csak a színek, a formák is uralják.
+                    </p>
+
+                    <p>Gólya vagyok. Csak egy kis pont a nagyvilágban, aki belül - akár a tűz és a víz, - beindulok, majd lehűtöm magam, vad színeket használok vagy finom pasztellt, aki állandóan vándorol az anyagok csodálatos világában, akinél semmi sem
+                        biztos, csak a változás és az újdonság!</p>
+
+                    <p>
+                        <strong>Kalandozz bátran az én kis műhelyemben!</strong>
+                    </p>
+                </div>
+
 
                 <br/>
-                <div id="bemutatkozas" class="p-2">
-                    <h5 class="intro">Nagy Zsófiának hívnak, művésznevem Gólya.</h5>
-                    <p class="intro">1976-ban születtem Budapesten. 1991-től a Képző- és Iparművészeti Szakközépiskola, - "kisképző" - könyvszakára jártam. Ezen kívül tanultam díszítőfestést, festményrestaurálást és képkeretezést. Jelenleg is ezzel foglalkozom, megrendelésre
-                        festményeket, grafikákat, ajándék tárgyakat készítek, valamint képeket restaurálok.</p>
-                </div><br>
+
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card border-primary mb-3" style="max-width: 20rem;">
@@ -174,106 +193,95 @@
                 </div>
                 <!---container vége--->
 
-                <div class="container" id="gondolatok">
-                    <h3>Az én világom</h3>
-
-                    <p>Munkám során jöttem rá, hogy bár a barokk mintái közé születtem, az én lelkem mégis inkább a szecesszió cifra világában érzi jól magát, ahol a gömbölyű formáktól és a hullámzó vonalaktól szinte megszédül az ember, ahol az élénk, bátor
-                        színek is teret kapnak.</p>
-
-                    <p>A színek világa egy csodálatos világ, ahol minden szín mögé egy hangulat és érzés bújik. Egy-egy színes üveg, bútor, képes megváltoztatni az ember hangulatát. Sok ember fehér meszelt falak közé tér haza, vagy az éppen divatos színek
-                        világában él, és figyelmen kívül hagyja a színek értelmét és hatalmát. A színek világa nem játék, okosan kell őket alkalmazni, hisz a lakásunkban használt színek nagy hatással vannak életünk, hangulatunk, érzéseink és gondolataink
-                        alakulására. Eme hatalmat azonban nem csak a színek, a formák is uralják.
-                    </p>
-
-                    <p>Gólya vagyok. Csak egy kis pont a nagyvilágban, aki belül - akár a tűz és a víz, - beindulok, majd lehűtöm magam, vad színeket használok vagy finom pasztellt, aki állandóan vándorol az anyagok csodálatos világában, akinél semmi sem
-                        biztos, csak a változás és az újdonság!</p>
-
-                    <p>
-                        <strong>Kalandozz bátran az én kis műhelyemben!</strong>
-                    </p>
-                </div>
             </div>
         </section>
     </main>
-
-    <footer class="bg-info">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 col-md-3 m-footer-contact">
-                    <a class="navbar-brand" href="index.html">
-
+    <footer class="bg-info ">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-sm-6 col-md-2 m-footer-contact ">
+                    <a class="navbar-brand " href="index.html ">
                         <h4>Gólyaműhely</h4>
-                        <h6>BUDAPEST, 2020</h6>
+                        <h6>BUDAPEST, 2020-2023
+                        </h6>
                     </a>
                 </div>
-
-                <div class="col-sm-6 col-md-3 m-footer-nav">
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
                     <strong>Fontosabb munkáim</strong>
                     <ul>
                         <li>
-                            <a href="olajfestmeny.html">Olajfestmény</a>
+                            <a href="olajfestmeny.html ">Olajfestmény</a>
                         </li>
                         <li>
-                            <a href="grafika.html">Grafika</a>
+                            <a href="grafika.html ">Grafika</a>
                         </li>
                         <li>
-                            <a href="mozaik.html">Mozaik</a>
+                            <a href="mozaik.html ">Mozaik</a>
                         </li>
                         <li>
-                            <a href="butor.html">Bútor</a>
+                            <a href="butor.html ">Bútor</a>
                         </li>
                         <li>
-                            <a href="mese.html">Mese</a>
+                            <a href="mese.html ">Mese</a>
                         </li>
                     </ul>
                 </div>
-
-                <div class="col-sm-6 col-md-3 m-footer-nav">
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
                     <strong>Referenciák</strong>
                     <ul>
                         <li>
-                            <a href="restauralas.html">Restaurálás</a>
+                            <a href="restauralas.html ">Restaurálás</a>
                         </li>
                         <li>
-                            <a href="mesegrafika.html">Mesegrafika</a>
+                            <a href="mesegrafika.html ">Mesegrafika</a>
                         </li>
                     </ul>
                 </div>
-
-                <div class="col-sm-6 col-md-3 m-footer-nav">
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
                     <strong>Információ</strong>
+                    <ul>
+                        <li>
+                            <a href="bemutatkozas.html ">Bemutatkozás</a>
+                        </li>
+                        <li>
+                            <a href="gyik.html ">Kérdések és válaszok</a>
+                        </li>
+                        <li>
+                            <a href="linkek.html ">Linkek</a>
+                        </li>
+                        <li>
+                            <a href="ajandekok.html ">Ajándéktárgyak</a>
+                        </li>
+                        <li>
+                            <a href="kedvencek.html ">Kedvencek</a>
+                        </li>
+                        <li>
+                            <a href="kapcsolat.html ">Kapcsolat</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
+                    <strong>Kapcsolat</strong>
                     <ul>
 
                         <li>
-                            <a href="bemutatkozas.html">Bemutatkozás</a>
+                            <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/ "><img src="pics\flaticons\facebook\icons8-facebook-32.png " alt="Facebook " id="fbikon "></a>
                         </li>
                         <li>
-                            <a href="gyik.html">Kérdések és válaszok</a>
+                            <img src="pics\flaticons\Call\icons8-phonelink-ring-32.png " alt="Image " id="telefonikon ">
+                            <span class="menu_telefonszam ">06-20-482-3933</span>
                         </li>
-                        <li>
-                            <a href="linkek.html">Linkek</a>
-                        </li>
-                        <li>
-                            <a href="ajandekok.html">Ajándéktárgyak</a>
-                        </li>
-                        <li>
-                            <a href="kedvencek.html">Kedvencek</a>
-                        </li>
-                        <li>
-                            <a href="kapcsolat.html">Kapcsolat</a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/"><img src="./pics/ico/fb_black_50x50.png" alt="Facebook"><br>Facebook</a>
-                        </li>
-                        <img id="tel" src="./pics/ico/phone_50x50.png" alt="Image"><br/>06-20-482-3933
+
                     </ul>
                 </div>
 
+
             </div>
-            <!---row vége--->
+            <!---row -vége--->
         </div>
         <!---container vége--->
     </footer>
+
 </body>
 
 </html>
