--- a/butor.html
+++ b/butor.html
@@ -14,38 +14,35 @@
     <link rel="stylesheet" type="text/css" href="./css/app.css" />
     <link rel="stylesheet" type="text/css" href="./css/butor.css" />
     <link href="https://fonts.googleapis.com/css?family=Allan|Arimo|Chakra+Petch|Crimson+Text|DM+Serif+Display|Londrina+Solid|Pacifico|Palanquin+Dark|Pattaya|Shadows+Into+Light&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js">
-    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
-
 
 <body>
 
     <nav class="navbar navbar-toggleable-md bg-success">
 
-
         <div class="container">
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#hamburgermenü" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class = "navbar-toggler-icon"></span> 
-            </button>
-
-
-
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
             <a class="navbar-brand" href="index.php">
-                Gólyaműhely<br />
-                <img src = "./pics/ico/ahtale2.png" class = "rounded-circle" alt = "" title = "Gólyaműhely" role = "img" id="golyaslogo">
-            </a>
-
-
+                    Gólyaműhely<br/>
+                    <img
+                        src="./pics/ico/ahtale2.png"
+                        class="rounded-circle"
+                        alt=""
+                        title="Gólyaműhely"
+                        role="img"
+                        id="golyaslogo">
+                </a>
 
             <div class="collapse navbar-collapse" id="hamburgermenü">
                 <ul class="navbar-nav ml-auto ">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Főoldal<span class = "sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Főoldal<span class="sr-only">(current)</span></a>
                     </li>
 
                     <li class="nav-item">
@@ -54,18 +51,16 @@
 
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="referenciak.html" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Referenciák
-                        </a>
+                                Referenciák
+                            </a>
 
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="festmeny-restauralas.html">Restaurálás</a>
 
                             <a class="dropdown-item" href="grafika.html">Mesegrafika</a>
 
-
                         </div>
                     </li>
-
 
                     <li class="nav-item">
                         <a class="nav-link" href="olajfestmenyek.html">Olajfestmény</a>
@@ -93,136 +88,194 @@
         </div>
     </nav>
 
-
-
-
-
     <main id="tartalom">
 
         <div class="container-fluid" id="kontener">
             <h3>Bútorok</h3>
             <!----1.sor-------------------->
             <div class="row">
-                <!----1.kép-------------------->
-                <div class="col-md-3">
-                    <a href="./butor/uvegmozaik_asztal.html">
-                        <img class="img-fluid" src=".\butor\kepek\uvegmozaik_asztal\a01.jpg" id="kep1">
-                    </a>
-                    <h4>Üvegmozaik asztal</h4>
+                <div class="gallery">
+                    <figure>
+                        <img src=".\butor\kepek\uvegmozaik_asztal\a01.jpg" alt="Üvegmozaik asztal 1. kép" />
+                        <figcaption>Üvegmozaik asztal
+                            <small>Asztallap méretei: Szélesség:50cm, Hosszúság:100cm, Magasság:60cm</small>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="./butor/kepek/uvegmozaik_asztal/asztal2.jpg" alt="Üvegmozaik asztal 2. kép" />
+                        <figcaption>Üvegmozaik asztal
+                            <small>2.kép</small>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="./butor/kepek/uvegmozaik_asztal/asztal3.jpg" alt="Üvegmozaik asztal 3. kép" />
+                        <figcaption>
+                            Üvegmozaik asztal
+                            <small>3.kép</small>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src=".\butor\kepek\mozaikberakasos_asztal\mozaikberakasos_asztal22.jpg" alt="Mozaikberakásos asztal 1. kép" />
+                        <figcaption>Mozaikberakásos asztal
+                            <small>Asztallap méretei: Szélesség:50cm, Hosszúság:70cm, Magasság:60cm</small>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="./butor/kepek/mozaikberakasos_asztal/mozaikberakasos_asztal2.jpg" alt="Mozaikberakásos asztal 2. kép, asztallap" />
+                        <figcaption>Mozaikberakásos asztal
+                            <small>2.kép</small>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src=".\\butor\kepek\uvegmozaik_dohanyzoasztal\a03.jpg" alt="Üvegmozaik dohányzóasztal 1. kép" />
+                        <figcaption>Üvegmozaik dohányzóasztal
+                            <small>Asztallap méretei: Szélesség:80cm, Hosszúság:80cm, Magasság:51cm</small>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="./butor/kepek/uvegmozaik_dohanyzoasztal/asztal7.jpg" alt="Üvegmozaik dohányzóasztal 2. kép" />
+                        <figcaption>Üvegmozaik dohányzóasztal
+                            <small>2.kép</small>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src=".\butor\kepek\viragmintas_kertipad\a04.jpg" alt="Virágmintás kerti pad 1. kép " />
+                        <figcaption>Virgámintás kerti pad
+                            <small>Szélesség:50cm, Hosszúság: 141cm, Mélysége:52cm; Legmagasabb pontján a
+                                magasság: 60cm Ülés magasság: 45 cm.</small>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="./butor/kepek/viragmintas_kertipad/pad2.jpg" alt="Virágmintás kerti pad 2. kép" />
+                        <figcaption>
+                            Virgámintás kerti pad
+                            <small>Kizárólag kézzel készített, vadonatúj antikolt fenyőbútor, virgámintás
+                                festéssel. Kinti és benti használatra is. Akár étkező garnitúrára is
+                                kiegészíthető! Ha van régi bútorod és szeretnél ilyet, az is megoldható.</small>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src="./butor/kepek/viragmintas_kertipad/pad3.jpg" alt="Virágmintás kerti pad 3. kép" />
+                        <figcaption>Virágmintás kerti pad
+                            <small>3.kép</small>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src=".\butor\kepek\tulipanos_lada\a05.jpg" alt="Tulipános láda tükörrel" />
+                        <figcaption>Tulipános láda tükörrel
+                            <small>Kizárólag kézzel készült, antikolt, tulipán-mintás bútor, a hozzá illő
+                                    tükörrel! Méretei: Szélesség:65cm Magasság:125cm</small>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src=".\butor\kepek\uvegpolcok\a06.jpg" id="kep6" alt="Üvegpolcok" />
+                        <figcaption>Üvegpolcok
+                            <small></small>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src=".\butor\kepek\antik_kollekcio\col.jpg" alt="Antik kollekciók" />
+                        <figcaption>Antik kollekciók
+                            <small></small>
+                        </figcaption>
+                    </figure>
+                    <figure>
+                        <img src=".\butor\kepek\antik_konyhabutor\kbp.jpg" alt="Egyedi antik konyhabútor" />
+                        <figcaption>Egyedi antik konyhabútor
+                            <small>Egyedi konyhabútor. Felújítva, majd vissza antikolva, a régies hatás miatt!</small>
+                        </figcaption>
+                    </figure>
                 </div>
 
-                <!----2.kép-------------------->
-                <div class="col-md-3">
-                    <a href="./butor/mozaikberakasos_asztal.html">
-                        <img class="img-fluid" src=".\butor\kepek\mozaikberakasos_asztal\mozaikberakasos_asztal22.jpg" id="kep2">
-                    </a>
-                    <h4>Mozaikberakásos asztal</h4>
-                </div>
-                <!----3.kép-------------------->
-                <div class="col-md-3">
-                    <a href="./butor/uvegmozaik_dohanyzoasztal.html">
-                        <img class="img-fluid" src=".\\butor\kepek\uvegmozaik_dohanyzoasztal\a03.jpg" id="kep3">
-                    </a>
-                    <h4>Üvegmozaik dohányzóasztal</h4>
-                </div>
-            </div>
-            <!----2.sor-------------------->
-            <div class="row">
-                <!----4.kép-------------------->
-                <div class="col-md-3" class="">
-                    <a href="./butor/viragmintas_kerti_pad.html">
-                        <img class="img-fluid" src=".\butor\kepek\viragmintas_kertipad\a04.jpg" id="kep4">
-                    </a>
-                    <h4>Virágmintás kerti pad</h4>
-                </div>
-                <!----5.kép-------------------->
-                <div class="col-md-3" class="">
-                    <a href="./butor/tulipanos_lada.html">
-                        <img class="img-fluid" src=".\butor\kepek\tulipanos_lada\a05.jpg" id="kep5">
-                    </a>
-                    <h4>Tulipános láda tükörrel</h4>
-                </div>
-                <!----6.kép-------------------->
-                <div class="col-md-3" class="">
-                    <a href="./butor/uvegpolcok.html">
-                        <img class="img-fluid" src=".\butor\kepek\uvegpolcok\a06.jpg" id="kep6">
-                    </a>
-                    <h4>Üvegpolcok</h4>
-                </div>
-            </div>
-            <!----3.sor-------------------->
-            <div class="row">
-                <!----7.kép-------------------->
-                <div class="col-md-3" class="">
-                    <a href="./butor/antik_kollekcio.html">
-                        <img class="img-fluid" src=".\butor\kepek\antik_kollekcio\col.jpg" id="kep7">
-                    </a>
-                    <h4>Antik kollekciók</h4>
-                </div>
-                <!----8.kép-------------------->
-                <div class="col-md-3" class="">
-                    <a href="./butor/egyedi_antik_konyhabutor.html">
-                        <img class="img-fluid" src=".\butor\kepek\antik_konyhabutor\kbp.jpg" id="kep8">
-                    </a>
-                    <h4>Egyedi antik konyhabútor</h4>
-                </div>
-            </div>
-        </div>
-        <!---container-->
+                <svg xmlns="http://www.w3.org/2000/svg " xmlns:xlink="http://www.w3.org/1999/xlink " style="display:none; ">
+                        <symbol id="close " viewbox="0 0 18 18 ">
+                            <path
+                                fill-rule="evenodd "
+                                clip-rule="evenodd "
+                                fill="#FFFFFF "
+                                d="M9,0.493C4.302,0.493,0.493,4.302,0.493,9S4.302,17.507,9,17.507 S17.507,13.698,17.507,9S13.698,0.493,9,0.493z M12.491,11.491c0.292,0.296,0.292,0.773,0,1.068c-0.293,0.295-0.767,0.295-1.059,0 l-2.435-2.457L6.564,12.56c-0.292,0.295-0.766,0.295-1.058,0c-0.292-0.295-0.292-0.772,0-1.068L7.94,9.035L5.435,6.507
+                            c-0.292-0.295-0.292-0.773,0-1.068c0.293-0.295,0.766-0.295,1.059,0l2.504,2.528l2.505-2.528c0.292-0.295,0.767-0.295,1.059,0 s0.292,0.773,0,1.068l-2.505,2.528L12.491,11.491z "/>
+                        </symbol>
+                    </svg>
 
+            </div>
+            <!---container-->
 
     </main>
-    <footer class="bg-success">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 col-md-3 m-footer-contact">
-                    <a class="navbar-brand" href="index.html">
-                        
-                        BUDAPEST
-                    </a>
+    <footer class="bg-success ">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-sm-6 col-md-3 m-footer-contact ">
+                    <a class="navbar-brand " href="index.html ">
+
+        BUDAPEST
+    </a>
                     <p>
                         Gólyaműhely<br>
                     </p>
                 </div>
 
-                <div class="col-sm-6 col-md-3 m-footer-nav">
+                <div class="col-sm-6 col-md-3 m-footer-nav ">
                     <strong>Fontosabb munkáim</strong>
                     <ul>
-                        <li><a href="olajfestmeny.html">Olajfestmény</a></li>
-                        <li><a href="grafika.html">Grafika</a></li>
-                        <li><a href="mozaik.html">Mozaik</a></li>
-                        <li><a href="butor.html">Bútor</a></li>
-                        <li><a href="mese.html">Mese</a></li>
+                        <li>
+                            <a href="olajfestmeny.html ">Olajfestmény</a>
+                        </li>
+                        <li>
+                            <a href="grafika.html ">Grafika</a>
+                        </li>
+                        <li>
+                            <a href="mozaik.html ">Mozaik</a>
+                        </li>
+                        <li>
+                            <a href="butor.html ">Bútor</a>
+                        </li>
+                        <li>
+                            <a href="mese.html ">Mese</a>
+                        </li>
                     </ul>
                 </div>
 
-
-                <div class="col-sm-6 col-md-3 m-footer-nav">
+                <div class="col-sm-6 col-md-3 m-footer-nav ">
                     <strong>Referenciák</strong>
                     <ul>
-                        <li><a href="restauralas.html">Restaurálás</a></li>
-                        <li><a href="mesegrafika.html">Mesegrafika</a></li>
+                        <li>
+                            <a href="restauralas.html ">Restaurálás</a>
+                        </li>
+                        <li>
+                            <a href="mesegrafika.html ">Mesegrafika</a>
+                        </li>
                     </ul>
                 </div>
 
-                <div class="col-sm-6 col-md-3 m-footer-nav">
+                <div class="col-sm-6 col-md-3 m-footer-nav ">
                     <strong>Információ</strong>
                     <ul>
 
-                        <li><a href="bemutatkozas.html">Bemutatkozás</a></li>
-                        <li><a href="gyik.html">Kérdések és válaszok</a></li>
-                        <li><a href="linkek.html">Linkek</a></li>
-                        <li><a href="ajandekok.html">Ajándéktárgyak</a></li>
-                        <li><a href="kedvencek.html">Kedvencek</a></li>
-                        <li><a href="kapcsolat.html">Kapcsolat</a></li>
                         <li>
-                            <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/"><img src="./pics/ico/fb_black_50x50.png" alt="Facebook"><br>Facebook</a>
+                            <a href="bemutatkozas.html ">Bemutatkozás</a>
                         </li>
-                        <img src="./pics/ico/phone_50x50.png" alt="Image"><br />06-20-482-3933
+                        <li>
+                            <a href="gyik.html ">Kérdések és válaszok</a>
+                        </li>
+                        <li>
+                            <a href="linkek.html ">Linkek</a>
+                        </li>
+                        <li>
+                            <a href="ajandekok.html ">Ajándéktárgyak</a>
+                        </li>
+                        <li>
+                            <a href="kedvencek.html ">Kedvencek</a>
+                        </li>
+                        <li>
+                            <a href="kapcsolat.html ">Kapcsolat</a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/ "><img src="./pics/ico/fb_black_50x50.png " alt="Facebook "><br>Facebook</a>
+                        </li>
+                        <img src="./pics/ico/phone_50x50.png " alt="Image "><br/>06-20-482-3933
                     </ul>
                 </div>
-
-
 
             </div>
             <!---row vége--->
@@ -230,17 +283,13 @@
         <!---container vége--->
     </footer>
 
-
-    <script src="js/kedvencek.js"></script>
-    <script src="./js/jquery-3.1.1.slim.min.js"></script>
-    <srcipt src="./js/tether.min.js"></srcipt>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/app.js"></script>
-    <script src="./js/bootstrap.js"></script>
-    <script src="./js/butor.js"></script>
-
+    <script src="./js/jquery-3.1.1.slim.min.js "></script>
+    <script src="./js/tether.min.js "></script>
+    <script src="./js/bootstrap.min.js "></script>
+    <script src="./js/app.js "></script>
+    <script src="./js/bootstrap.js "></script>
+    <script src="./js/butor.js "></script>
 
 </body>
-
 
 </html>
