--- a/festmeny-restauralas.html
+++ b/festmeny-restauralas.html
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse" id="hamburgermenü">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Főoldal<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.php">Főoldal<span class="sr-only">(current)</span></a>
                     </li>
 
                     <li class="nav-item">
@@ -1014,104 +1014,96 @@
         <!---Fősor---vége---------->
 
     </main>
-    <footer class="bg-info">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6 col-md-3 m-footer-contact">
-
-                    <h4>
-                        <b>Gólyaműhely</b></h4>
-                    <h6>
-                        Budapest,
-                        <br/>2020-2022
-                    </h6>
-
+    <footer class="bg-info ">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-sm-6 col-md-2 m-footer-contact ">
+                    <a class="navbar-brand " href="index.html ">
+                        <h4>Gólyaműhely</h4>
+                        <h6>BUDAPEST, 2020-2023
+                        </h6>
+                    </a>
                 </div>
-                <div class="col-sm-6 col-md-2 m-footer-nav">
-
-                    <div class="embed-responsive embed-responsive-4by3">
-                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/7Clic1sbBcg?autoplay=1"></iframe>
-                    </div>
-
-                </div>
-
-                <div class="col-sm-6 col-md-2 m-footer-nav">
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
                     <strong>Fontosabb munkáim</strong>
                     <ul>
                         <li>
-                            <a href="olajfestmeny.html">Olajfestmény</a>
+                            <a href="olajfestmeny.html ">Olajfestmény</a>
                         </li>
                         <li>
-                            <a href="grafika.html">Grafika</a>
+                            <a href="grafika.html ">Grafika</a>
                         </li>
                         <li>
-                            <a href="mozaik.html">Mozaik</a>
+                            <a href="mozaik.html ">Mozaik</a>
                         </li>
                         <li>
-                            <a href="butor.html">Bútor</a>
+                            <a href="butor.html ">Bútor</a>
                         </li>
                         <li>
-                            <a href="mese.html">Mese</a>
+                            <a href="mese.html ">Mese</a>
                         </li>
                     </ul>
                 </div>
-
-                <div class="col-sm-6 col-md-2 m-footer-nav">
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
                     <strong>Referenciák</strong>
                     <ul>
                         <li>
-                            <a href="festmeny-restauralas.html">Restaurálás</a>
+                            <a href="restauralas.html ">Restaurálás</a>
                         </li>
                         <li>
-                            <a href="grafika.html">Mesegrafika</a>
+                            <a href="mesegrafika.html ">Mesegrafika</a>
                         </li>
                     </ul>
                 </div>
-
-                <div class="col-sm-6 col-md-2 m-footer-nav">
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
                     <strong>Információ</strong>
+                    <ul>
+                        <li>
+                            <a href="bemutatkozas.html ">Bemutatkozás</a>
+                        </li>
+                        <li>
+                            <a href="gyik.html ">Kérdések és válaszok</a>
+                        </li>
+                        <li>
+                            <a href="linkek.html ">Linkek</a>
+                        </li>
+                        <li>
+                            <a href="ajandekok.html ">Ajándéktárgyak</a>
+                        </li>
+                        <li>
+                            <a href="kedvencek.html ">Kedvencek</a>
+                        </li>
+                        <li>
+                            <a href="kapcsolat.html ">Kapcsolat</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
+                    <strong>Kapcsolat</strong>
                     <ul>
 
                         <li>
-                            <a href="bemutatkozas.html">Bemutatkozás</a>
+                            <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/ "><img src="pics\flaticons\facebook\icons8-facebook-32.png " alt="Facebook " id="fbikon "></a>
                         </li>
                         <li>
-                            <a href="gyik.html">Kérdések és válaszok</a>
+                            <img src="pics\flaticons\Call\icons8-phonelink-ring-32.png " alt="Image " id="telefonikon ">
+                            <span class="menu_telefonszam ">06-20-482-3933</span>
                         </li>
-                        <li>
-                            <a href="linkek.html">Linkek</a>
-                        </li>
-                        <li>
-                            <a href="ajandekok.html">Ajándéktárgyak</a>
-                        </li>
-                        <li>
-                            <a href="kedvencek.html">Kedvencek</a>
-                        </li>
-                        <li>
-                            <a href="kapcsolat.html">Kapcsolat</a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/"><img src="./pics/ico/fb_black_50x50.png" alt="Facebook">
-                                </br>Facebook</a>
-                        </li>
-                        </br>
-                        </li> <img src="./pics/ico/phone_50x50.png" alt="Image">
-                        </br>06-20-482-3933 </li>
+
                     </ul>
                 </div>
+
+
             </div>
-            <!---row vége--->
+            <!---row -vége--->
         </div>
         <!---container vége--->
-
-
-
-
-
     </footer>
     <script src="./js/jquery-3.1.1.slim.min.js"></script>
-    <srcipt src="./js/tether.min.js"></srcipt>
-    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/tether.min.js">
+    </script>
+    <script src="./js/bootstrap.min.js">
+    </script>
     <script src="./js/app.js "></script>
     <script src="./js/bootstrap.js "></script>
     <script src="/js/index.js "></script>
