--- a/grafika.html
+++ b/grafika.html
@@ -257,57 +257,84 @@
     <footer class="bg-info ">
         <div class="container ">
             <div class="row ">
-                <div class="col-sm-6 col-md-3 m-footer-contact ">
+                <div class="col-sm-6 col-md-2 m-footer-contact ">
                     <a class="navbar-brand " href="index.html ">
-                        
-                        BUDAPEST
+                        <h4>Gólyaműhely</h4>
+                        <h6>BUDAPEST, 2020-2023
+                        </h6>
                     </a>
-                    <p>
-                        Gólyaműhely<br>
-                    </p>
                 </div>
-
-                <div class="col-sm-6 col-md-3 m-footer-nav ">
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
                     <strong>Fontosabb munkáim</strong>
                     <ul>
-                        <li><a href="olajfestmeny.html ">Olajfestmény</a></li>
-                        <li><a href="grafika.html ">Grafika</a></li>
-                        <li><a href="mozaik.html ">Mozaik</a></li>
-                        <li><a href="butor.html ">Bútor</a></li>
-                        <li><a href="mese.html ">Mese</a></li>
+                        <li>
+                            <a href="olajfestmeny.html ">Olajfestmény</a>
+                        </li>
+                        <li>
+                            <a href="grafika.html ">Grafika</a>
+                        </li>
+                        <li>
+                            <a href="mozaik.html ">Mozaik</a>
+                        </li>
+                        <li>
+                            <a href="butor.html ">Bútor</a>
+                        </li>
+                        <li>
+                            <a href="mese.html ">Mese</a>
+                        </li>
                     </ul>
                 </div>
-
-
-                <div class="col-sm-6 col-md-3 m-footer-nav ">
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
                     <strong>Referenciák</strong>
                     <ul>
-                        <li><a href="restauralas.html ">Restaurálás</a></li>
-                        <li><a href="mesegrafika.html ">Mesegrafika</a></li>
+                        <li>
+                            <a href="restauralas.html ">Restaurálás</a>
+                        </li>
+                        <li>
+                            <a href="mesegrafika.html ">Mesegrafika</a>
+                        </li>
                     </ul>
                 </div>
-
-                <div class="col-sm-6 col-md-3 m-footer-nav ">
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
                     <strong>Információ</strong>
                     <ul>
-
-                        <li><a href="bemutatkozas.html ">Bemutatkozás</a></li>
-                        <li><a href="gyik.html ">Kérdések és válaszok</a></li>
-                        <li><a href="linkek.html ">Linkek</a></li>
-                        <li><a href="ajandekok.html ">Ajándéktárgyak</a></li>
-                        <li><a href="kedvencek.html ">Kedvencek</a></li>
-                        <li><a href="kapcsolat.html ">Kapcsolat</a></li>
                         <li>
-                            <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/ "><img src="./pics/ico/fb_black_50x50.png " alt="Facebook "><br>Facebook</a>
+                            <a href="bemutatkozas.html ">Bemutatkozás</a>
                         </li>
-                        <img src="./pics/ico/phone_50x50.png " alt="Image "><br />06-20-482-3933
+                        <li>
+                            <a href="gyik.html ">Kérdések és válaszok</a>
+                        </li>
+                        <li>
+                            <a href="linkek.html ">Linkek</a>
+                        </li>
+                        <li>
+                            <a href="ajandekok.html ">Ajándéktárgyak</a>
+                        </li>
+                        <li>
+                            <a href="kedvencek.html ">Kedvencek</a>
+                        </li>
+                        <li>
+                            <a href="kapcsolat.html ">Kapcsolat</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-6 col-md-2 m-footer-nav ">
+                    <strong>Kapcsolat</strong>
+                    <ul>
+
+                        <li>
+                            <a href="https://www.facebook.com/G%C3%B3lyam%C5%B1hely-136971399775847/ "><img src="pics\flaticons\facebook\icons8-facebook-32.png " alt="Facebook " id="fbikon "></a>
+                        </li>
+                        <li>
+                            <img src="pics\flaticons\Call\icons8-phonelink-ring-32.png " alt="Image " id="telefonikon ">
+                            <span class="menu_telefonszam ">06-20-482-3933</span>
+                        </li>
+
                     </ul>
                 </div>
 
-
-
             </div>
-            <!---row vége--->
+            <!---row -vége--->
         </div>
         <!---container vége--->
     </footer>
